# github-report

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GITHUB_PAGES_SETUP.md  MIGRATION_GUIDE.md  README.md  TEST_UPDATES_NOV_25_2025.md  commit-reports.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  start-dev.sh  start-prod.sh  start.sh
.github/: copilot-instructions.md  iteration-schedule.yml
docs/: 2025-11-12_03-57-PM_WeMoAD-umich_iteration-67.html  2025-11-12_04-54-PM_WeMoAD-umich_iteration-67.html  2025-11-12_04-58-PM_WeMoAD-umich_iteration-67.html  2025-11-12_05-38-PM_WeMoAD-umich_iteration-67.html  2025-11-12_06-52-PM_WeMoAD-umich_iteration-67.html  2025-11-12_07-29-PM_WeMoAD-umich_iteration-67.html  2025-11-12_08-23-PM_WeMoAD-umich_iteration-67.html  2025-11-19_09-24-PM_WeMoAD-umich_iteration-68.html  2025-11-30_11-09-PM_WeMoAD-umich_iteration-69.html  2025-12-01_09-29-PM_WeMoAD-umich_iteration-68.html  2025-12-01_09-34-PM_WeMoAD-umich_iteration-68.html  2025-12-01_11-14-PM_WeMoAD-umich_iteration-68.html  2025-12-14_12-21-AM_WeMoAD-umich_iteration-69.html  2025-12-28_12-25-AM_WeMoAD-umich_iteration-70.html  20251111_164108_WeMoAD-umich_iteration-67.html  20251111_211713_WeMoAD-umich_iteration-67.html  20251112_150315_WeMoAD-umich_iteration-67.html  2026-01-11_12-26-AM_WeMoAD-umich_iteration-71.html  2026-01-25_12-29-AM_WeMoAD-umich_iteration-72.html  2026-02-08_01-02-AM_WeMoAD-umich_iteration-73.html  2026-02-22_12-59-AM_WeMoAD-umich_iteration-74.html  index.html  reports.json  (+9 more)
(+80 files in other folders)
