[project]
name = "agent-mcp-demo"
version = "0.1.0"
description = "MCP server with two agents: one for API, one for JSON file"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.10.1", "PyGithub>=2.3.0", "python-dotenv>=1.0.0", "fastapi>=0.104.0", "azure-devops>=7.1.0b4" ]
[[project.authors]]
name = "Jane Zhao"
email = "jqzhao@umich.edu"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
agent-mcp-demo = "agent_mcp_demo:main"
