[project]
name = "agent_mcp_demo"
version = "0.1.0"
description = "MCP server with two agents: one for API, one for JSON file"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.12.2",
    "PyGithub>=2.3.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "azure-devops>=7.1.0b4",
    "pytz>=2021.1",
    "markdown>=3.3.4",
    "uvicorn>=0.15.0",
    "httpx>=0.24.1",
    "pydantic>=1.10.12",
    "PyYAML>=6.0",
    "APScheduler>=3.10.0",
    "GitPython>=3.1.0"
]
[[project.authors]]
name = "Jane Zhao"
email = "jqzhao@umich.edu"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
agent-mcp-demo = "agent_mcp_demo:main"
